# Nesulator

./: .gitignore  CMakeLists.txt
src/: address.h  cartridge.cpp  cartridge.h  cpu.cpp  cpu.h  ines.cpp  ines.h  main.cpp  mapper.cpp  mapper.h  mappers.cpp  mappers.h  memory.cpp  memory.h  nes.cpp  nes.h  op.cpp  op.h  ops.cpp  ops.h  ppu.cpp  ppu.h  utils.h
src/mappers/: nrom.cpp  nrom.h
src/op/: arith.cpp  arith.h  control.cpp  control.h  flags.cpp  flags.h  irq.cpp  irq.h  loads.cpp  loads.h  stack.cpp  stack.h  stores.cpp  stores.h  transfers.cpp  transfers.h
src/ops/: irq.cpp  irq.h
